--- a/CIS266Exercise7/Movies.csproj
+++ b/CIS266Exercise7/Movies.csproj
@@ -61,6 +61,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GenreForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GenreForm.Designer.cs">
+      <DependentUpon>GenreForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -86,6 +92,9 @@
     <Compile Include="RatingsForm.Designer.cs">
       <DependentUpon>RatingsForm.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="GenreForm.resx">
+      <DependentUpon>GenreForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
