--- a/CIS266Exercise7/Movies.csproj
+++ b/CIS266Exercise7/Movies.csproj
@@ -139,10 +139,10 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Movies.mdf">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Movies_log.ldf">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       <DependentUpon>Movies.mdf</DependentUpon>
     </Content>
   </ItemGroup>
