--- a/CIS266Homework4Solution/Homework4.csproj
+++ b/CIS266Homework4Solution/Homework4.csproj
@@ -48,7 +48,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="System" />
+    <Reference Include="System">
+      <HintPath>..\..\..\..\..\..\Program Files (x86)\Reference Assemblies\Microsoft\Framework\.NETFramework\v4.5.2\System.dll</HintPath>
+    </Reference>
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -61,6 +63,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CourseAndSectionsForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CourseAndSectionsForm.Designer.cs">
+      <DependentUpon>CourseAndSectionsForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="CoursesForm.cs">
       <SubType>Form</SubType>
     </Compile>
