--- a/CIS266Homework4Solution/App.config
+++ b/CIS266Homework4Solution/App.config
@@ -4,7 +4,7 @@
     </configSections>
     <connectionStrings>
         <add name="Homework4.Properties.Settings.RegistrationConnectionString"
-            connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\Registration.mdf;Integrated Security=True"
+            connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\Registration.mdf;Integrated Security=True;Connect Timeout=30"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
